refactor(computation): adopt SequencedCollection API and optimize Arrow transport
Modernize collection access patterns (5 files changed).

Replaces legacy collection access patterns with Java 21+
SequencedCollection methods (getFirst(), getLast()) in
computation module classes.

Optimizes ArrowIpcTransport allocation strategy to reduce
memory churn during large batch serialization operations.